# haskell

./: README.md
exercises/: adhoc.hs  artithbroken.hs  ch_07_01_lambda.hs  ch_07_final.hs  ch_08_dividedby.hs  ch_09_enum.hs  d_type.hs  datatype.hs  kwon3.hs  sing.hs
exercises/CodeWars.hsproj/: .uuid  CodeWars.cabal  DigitalRoot.hs  Longest.hs  PowersOfTwo.hs  _DigitalRoot.hsplay  _Longest.hsplay  _PowersOfTwo.hsplay
exercises/Programming Haskell Book Exercises.hsproj/: .uuid  Ch_07_arith.hs  Ch_08_dividedby.hs  Ch_08_ex.hs  Ch_09_Cipher.hs  Ch_09_Standard.hs  Ch_09_Upper.hs  Ch_09_enum.hs  Ch_09_symm.hs  Ch_09_zip.hs  Datatype.hs  Eq_inst.hs  Kwon1.hs  Kwon2.hs  Kwon3.hs  Letwhere.hs  Polymorphism.hs  ProgrammingHaskellBookExercises.cabal  _Ch_09_Cipher.hsplay  _Ch_09_Standard.hsplay  _Ch_09_Upper.hsplay  _Ch_09_enum.hsplay  _Ch_09_symm.hsplay  _Ch_09_zip.hsplay  _Polymorphism.hsplay
projecteuler/: pr001.hs  pr002.hs  pr003.hs  pr004.hs  pr005.hs  pr006.hs  pr007.hs  pr008.hs  pr009.hs  pr010.hs  pr011.hs
