name: ProgrammingHaskellBookExercises
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-6.29-1
x-last-ide-version: HfM1.4.0
Executable ProgrammingHaskellBookExercises
  main-is: Programming_Haskell_Book_Exercises.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      Ch_07_arith
      Adhoc
      Ch_07_final
      Ch_09_Upper
      Artithbroken
      Ch_08_ex
      Ch_09_enum
      Ch_08_dividedby
      Ch_07_01_lambda
      Ch_09_Cipher
      Eq_inst
      Kwon1
      Kwon2
      Ch_09_zip
      D_type
      Kwon3
      Letwhere
      Ch_09_symm
      Datatype
      Polymorphism
      Sing
